--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,63 @@
-Package: ClinicoPath
 Type: Package
-Title: What the Package Does (Title Case)
-Version: 0.0.0
-Author: Who wrote it
-Maintainer: The package maintainer <yourself@somewhere.net>
-Description: More about what it does (maybe more than one line)
-    Use four spaces when indenting paragraphs within the Description.
-License: What license is it under?
+Package: ClinicoPath
+Title: Analysis for Clinicopathological Research
+Version: 0.0.1.0006
+Date: 2020-04-26
+Authors@R: 
+    person(given = "Serdar",
+           family = "Balci",
+           role = c("aut", "cre"),
+           email = "drserdarbalci@gmail.com",
+           comment = c(ORCID = "0000-0002-7852-3851"))
+Maintainer: Serdar Balci <drserdarbalci@gmail.com>
+Description: Analysis for Clinicopathological Research
+    ClinicoPath help researchers to generate natural language summaries of
+    their dataset, generate cross tables with statistical tests, and
+    survival analysis with survival tables, survival plots, and natural
+    language summaries.
+License: GPL-3
+URL: https://github.com/sbalci/ClinicoPathJamoviModule/,
+    https://sbalci.github.io/ClinicoPathJamoviModule/
+BugReports: 
+    https://github.com/sbalci/ClinicoPathJamoviModule/issues/
+Depends:
+    R (>= 3.6.0)
+Imports: 
+    dplyr,
+    explore,
+    finalfit,
+    forcats,
+    ggalluvial,
+    ggplot2,
+    statsExpressions,
+    ggstatsplot,
+    glue,
+    janitor,
+    jmvcore (>= 0.8.5),
+    jsonlite,
+    knitr,
+    purrr,
+    R6,
+    scales,
+    survival,
+    survminer,
+    tableone,
+    tangram,
+    tibble,
+    tidyr
+Suggests:
+    rmarkdown,
+    kableExtra
+Remotes:
+    easystats/insight,
+    easystats/bayestestR,
+    easystats/parameters,
+    easystats/modelbased,
+    easystats/effectsize,
+    easystats/report
+VignetteBuilder: 
+    knitr
 Encoding: UTF-8
 LazyData: true
-Imports: jmvcore (>= 0.8.5), R6
+Roxygen: list(markdown = TRUE)
+RoxygenNote: 7.1.0
