--- a/jamovi/0000.yaml
+++ b/jamovi/0000.yaml
@@ -1,18 +1,105 @@
 ---
-title: What the Package Does (Title Case)
+title: Common Analysis for Clinicopathological Research
 name: ClinicoPath
-version: 0.0.0
+version: 0.0.1.0006
 jms: '1.0'
 authors:
-  - Who wrote it
-maintainer: The package maintainer <yourself@somewhere.net>
-date: '1970-01-01'
+  - Serdar Balci
+maintainer: Serdar Balci <drserdarbalci@gmail.com>
+date: '2020-04-26'
 type: R
 description: >-
-  More about what it does (maybe more than one line) Use four spaces when
-  indenting paragraphs within the Description.
-analyses: []
+  ClinicoPath help researchers to generate natural language summaries of their
+  dataset, generate cross tables with statistical tests, and survival analysis
+  with survival tables, survival plots, and natural language summaries.
+analyses:
+  - title: Table One
+    name: tableone
+    ns: ClinicoPath
+    menuGroup: ClinicoPath
+    menuSubgroup: Descriptives
+    menuTitle: Table One
+    description: Function for making Table One.
+  - title: Summary of Continuous Variables
+    name: summarydata
+    ns: ClinicoPath
+    menuGroup: ClinicoPath
+    menuSubgroup: Descriptives
+    menuTitle: Summary of Continuous Variables
+  - title: Summary of Categorical Variables
+    name: reportcat
+    ns: ClinicoPath
+    menuGroup: ClinicoPath
+    menuSubgroup: Descriptives
+    menuTitle: Summary of Categorical Variables
+  - title: CrossTables
+    name: crosstable
+    ns: ClinicoPath
+    menuGroup: ClinicoPath
+    menuSubgroup: Comparisons
+    menuTitle: CrossTables
+    description: Function for making Cross Tables.
+  - title: Graphs and Plots
+    name: statsplot2
+    ns: ClinicoPath
+    menuGroup: ClinicoPath
+    menuSubgroup: Comparisons
+    menuTitle: Graphs and Plots
+  - title: Survival Analysis
+    name: survival
+    ns: ClinicoPath
+    menuGroup: ClinicoPath
+    menuSubgroup: Survival
+    menuTitle: Survival Analysis
+  - title: Multivariate Survival Analysis
+    name: multisurvival
+    ns: ClinicoPath
+    menuGroup: ClinicoPath
+    menuSubgroup: Survival
+    menuTitle: Multivariate Survival Analysis
+  - title: Odds Ratio Table and Plot
+    name: oddsratio
+    ns: ClinicoPath
+    menuGroup: ClinicoPath
+    menuSubgroup: Survival
+    menuTitle: Odds Ratio Table and Plot
+datasets:
+  - name: histopathology including analysis
+    path: histopathologyanalysis.omv
+    description: >-
+      Fake histopathology research data for ClinicoPath module, includes
+      analysis
+    tags:
+      - Table One
+      - Data Summary
+      - Survival
+      - Natural Language
+  - name: histopathology data only
+    path: histopathology.omv
+    description: Fake histopathology research data for ClinicoPath module
+    tags:
+      - Table One
+      - Data Summary
+      - Survival
+  - name: melanoma
+    path: melanoma.csv
+    description: 'melanoma dataset obtained from {boot}.'
+    tags:
+      - Data Summary
+      - Survival
+      - Competing risks regression
+  - name: colon
+    path: colon.csv
+    description: 'colon cancer dataset, obtained from {survival}.'
+    tags:
+      - Data Summary
+      - Survival
+  - name: BreastCancer
+    path: BreastCancer.csv
+    description: 'Wisconsin Breast Cancer Database dataset, obtained from {mlbench}.'
+    tags:
+      - Classification
 usesNative: true
-minApp: 1.0.8
+minApp: 1.2.8
 
 ...
