--- a/jamovi/decision.u.yaml
+++ b/jamovi/decision.u.yaml
@@ -1,5 +1,5 @@
-title: Odds Ratio Table and Plot
-name: oddsratio
+title: Medical Decision
+name: decision
 jus: '3.0'
 stage: 0
 compilerMode: tame
@@ -7,17 +7,30 @@ children:
   - type: VariableSupplier
     persistentItems: false
     stretchFactor: 1
+
     children:
       - type: TargetLayoutBox
-        label: Explanatory Variables
+        label: Gold Standart
+
         children:
           - type: VariablesListBox
-            name: explanatory
-            isTarget: true
-      - type: TargetLayoutBox
-        label: Mortality or Recurrence
-        children:
-          - type: VariablesListBox
-            name: outcome
+            name: gold
             maxItemCount: 1
             isTarget: true
+
+          - type: LevelSelector
+            name: goldPositive
+            enable: (gold)
+
+      - type: TargetLayoutBox
+        label: New Test
+
+        children:
+          - type: VariablesListBox
+            name: newtest
+            maxItemCount: 1
+            isTarget: true
+
+          - type: LevelSelector
+            name: testPositive
+            enable: (newtest)
