--- a/jamovi/decisioncalculator.r.yaml
+++ b/jamovi/decisioncalculator.r.yaml
@@ -9,17 +9,17 @@ items:
     #   title: To Do
     #   type:  Html
 
-    - name:  text1
-      title: Decision Calculator
-      type:  Preformatted
+    # - name:  text1
+    #   title: Decision Calculator
+    #   type:  Preformatted
 
     - name:  text2
       title: Decision Calculator
       type:  Preformatted
 
-    - name:  table1
-      title: 'Table 1'
-      type:  Html
+    # - name:  table1
+    #   title: 'Table 1'
+    #   type:  Html
 
 
 
