--- a/jamovi/decision.a.yaml
+++ b/jamovi/decision.a.yaml
@@ -6,9 +6,23 @@ menuSubgroup: Decision
 version: '1.0.0'
 jas: '1.2'
 
+description:
+    main: >
+        Function for Medical Decision Analysis. Sensitivity, specificity, positive predictive value,
+        negative predictive value.
+    R:
+        dontrun: true
+        usage: |
+            # example will be added
+
+
 options:
     - name: data
       type: Data
+      description:
+          R: >
+            The data as a data frame.
+
 
     - name: gold
       title: Gold Standart
