--- a/jamovi/decisioncalculator.a.yaml
+++ b/jamovi/decisioncalculator.a.yaml
@@ -6,6 +6,14 @@ menuSubgroup: Decision
 version: '1.0.0'
 jas: '1.2'
 
+description:
+    main: Function for Medical Decision Calculator.
+    R:
+        dontrun: true
+        usage: |
+            # example will be added
+
+
 options:
     - name: TP
       title: 'True Positive ='
@@ -15,15 +23,34 @@ options:
     - name: TN
       title: 'True Negative ='
       type: Number
-      default: 30
+      default: 80
 
     - name: FP
       title: 'False Positive ='
       type: Number
-      default: 20
+      default: 30
 
     - name: FN
       title: 'False Negative ='
       type: Number
-      default: 80
+      default: 20
+
+    - name: pp
+      title: Prior Probability (prevelance)
+      type: Bool
+      default: false
+
+    - name: pprob
+      title: Prior Probability (prevelance)
+      type: Number
+      default: 0.30
+      min: 0.01
+      max: 0.99
+      description:
+          ui: >
+            Prior probability (disease prevelance in the community).
+            Requires a value between 0.01 and 0.99, default null.
+          R: >
+            Prior probability (disease prevelance in the community).
+            Requires a value between 0.01 and 0.99, default null.
 ...
