--- a/jamovi/tableone.a.yaml
+++ b/jamovi/tableone.a.yaml
@@ -30,4 +30,16 @@ options:
           R: >
             a string naming the variables from `data` that contains the
             values used for the Table One.
+
+
+    - name: sty
+      title: Table Style
+      type: List
+      options:
+        - title: tableone
+          name: t1
+        - title: gtsummary
+          name: t2
+      default: t1
+
 ...
