--- a/jamovi/tableone.r.yaml
+++ b/jamovi/tableone.r.yaml
@@ -9,13 +9,21 @@ items:
       title: To Do
       type:  Html
 
-    - name:  text1
+
+    - name:  tablestyle1
       title: ''
       type:  Preformatted
       clearWith:
           - vars
+      visible: (sty:t1)
+      refs: tableone
 
-
-refs: tableone
+    - name:  tablestyle2
+      title: ''
+      type:  Html
+      clearWith:
+          - vars
+      visible: (sty:t2)
+      refs: gtsummary
 
 ...
