--- a/jamovi/tableone.a.yaml
+++ b/jamovi/tableone.a.yaml
@@ -40,6 +40,17 @@ options:
           name: t1
         - title: gtsummary
           name: t2
+        - title: arsenal
+          name: t3
+        - title: janitor
+          name: t4
       default: t1
+
+
+    - name: excl
+      title: Exclude Missing (NA)
+      type: Bool
+      default: true
+
 
 ...
