--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,34 +5,29 @@ export(agreementClass)
 export(crosstable)
 export(crosstableClass)
 export(decision)
-export(decisionClass)
 export(decisioncalculator)
 export(decisioncalculatorClass)
 export(multisurvival)
-export(multisurvivalClass)
 export(oddsratio)
-export(oddsratioClass)
 export(reportcat)
-export(reportcatClass)
 export(statsplot2)
-export(statsplot2Class)
 export(survival)
-export(survivalClass)
 export(tableone)
-export(tableoneClass)
 import(caret)
 import(dplyr)
 import(finalfit)
 import(ggalluvial)
 import(ggplot2)
 import(ggstatsplot)
-import(irr)
 import(jmvcore)
 import(survival)
 import(survminer)
 importFrom(R6,R6Class)
 importFrom(caret,confusionMatrix)
 importFrom(ggalluvial,StatStratum)
+importFrom(irr,agree)
+importFrom(irr,kappa2)
+importFrom(irr,kappam.fleiss)
 importFrom(jmvcore,toNumeric)
 importFrom(tableone,CreateTableOne)
 importFrom(utils,data)
