--- a/jamovi/0000.yaml
+++ b/jamovi/0000.yaml
@@ -6,7 +6,7 @@ jms: '1.0'
 authors:
   - Serdar Balci
 maintainer: Serdar Balci <drserdarbalci@gmail.com>
-date: '2020-05-03'
+date: '2020-05-14'
 type: R
 description: >-
   ClinicoPath help researchers to generate natural language summaries of their
@@ -26,12 +26,14 @@ analyses:
     menuGroup: ClinicoPath
     menuSubgroup: Descriptives
     menuTitle: Summary of Continuous Variables
+    description: Function for Generating Summaries for Continuous Variables.
   - title: Summary of Categorical Variables
     name: reportcat
     ns: ClinicoPath
     menuGroup: ClinicoPath
     menuSubgroup: Descriptives
     menuTitle: Summary of Categorical Variables
+    description: Function for Generating Summaries for Categorical Variables.
   - title: CrossTables
     name: crosstable
     ns: ClinicoPath
@@ -45,24 +47,28 @@ analyses:
     menuGroup: ClinicoPath
     menuSubgroup: Comparisons
     menuTitle: Graphs and Plots
+    description: Function for Generating Plots and Graphs Based on Variable Types.
   - title: Survival Analysis
     name: survival
     ns: ClinicoPath
     menuGroup: ClinicoPath
     menuSubgroup: Survival
     menuTitle: Survival Analysis
+    description: Function for Generating Summaries for Survival Analysis.
   - title: Multivariate Survival Analysis
     name: multisurvival
     ns: ClinicoPath
     menuGroup: ClinicoPath
     menuSubgroup: Survival
     menuTitle: Multivariate Survival Analysis
+    description: Function for Multivariate Survival Analysis using Cox-regression.
   - title: Odds Ratio Table and Plot
     name: oddsratio
     ns: ClinicoPath
     menuGroup: ClinicoPath
     menuSubgroup: Survival
     menuTitle: Odds Ratio Table and Plot
+    description: Function for Odds Ratio Table and Plot.
   - title: Interrater Reliability
     name: agreement
     ns: ClinicoPath
@@ -76,12 +82,16 @@ analyses:
     menuGroup: ClinicoPath
     menuSubgroup: Decision
     menuTitle: Medical Decision
+    description: >
+      Function for Medical Decision Analysis. Sensitivity, specificity, positive
+      predictive value, negative predictive value.
   - title: Decision Calculator
     name: decisioncalculator
     ns: ClinicoPath
     menuGroup: ClinicoPath
     menuSubgroup: Decision
     menuTitle: Decision Calculator
+    description: Function for Medical Decision Calculator.
 datasets:
   - name: histopathology including analysis
     path: histopathologyanalysis.omv
@@ -119,6 +129,6 @@ datasets:
     tags:
       - Classification
 usesNative: true
-minApp: 1.3.0
+minApp: 1.2.18
 
 ...
