--- a/jamovi/survival.r.yaml
+++ b/jamovi/survival.r.yaml
@@ -1,6 +1,6 @@
 ---
 name:  survival
-title: Survival Analysis
+title: '`Survival Analysis - ${explanatory}`'
 jrs:   '1.1'
 
 items:
@@ -13,28 +13,8 @@ items:
           - outcome
           - overalltime
 
-    # - name:  deneme
-    #   title: ''
-    #   type:  Preformatted
-
-    # - name:  deneme2
-    #   title: ''
-    #   type:  Preformatted
-
-    # - name:  deneme3
-    #   title: ''
-    #   type:  Preformatted
-
-    # - name:  deneme4
-    #   title: ''
-    #   type:  Preformatted
-
-    # - name:  text1
-    #   title: Median Survival Table
-    #   type:  Preformatted
-
     - name:  text2
-      title: 'Median Survival Summary and Table'
+      title: '`Median Survival Summary and Table - ${explanatory}`'
       type:  Preformatted
       clearWith:
           - explanatory
@@ -42,7 +22,7 @@ items:
           - overalltime
 
     - name:  text1html
-      title: Median Survival Table
+      title: '`Median Survival Table  - ${explanatory}`'
       type:  Html
       clearWith:
           - explanatory
@@ -54,7 +34,7 @@ items:
     #   type:  Preformatted
 
     - name:  text5
-      title: 'Cox Regression Summary and Table'
+      title: '`Cox Regression Summary and Table - ${explanatory}`'
       type:  Preformatted
       clearWith:
           - explanatory
@@ -62,7 +42,7 @@ items:
           - overalltime
 
     - name:  text4
-      title: Cox Table
+      title: '`Cox Table- ${explanatory}`'
       type:  Html
       clearWith:
           - explanatory
@@ -70,11 +50,15 @@ items:
           - overalltime
 
     - name:  text7
-      title: '1, 3, 5-yr Survival Summary and Table'
+      title: '`1, 3, 5-yr Survival Summary and Table  - ${explanatory}`'
       type:  Preformatted
+      clearWith:
+          - explanatory
+          - outcome
+          - overalltime
 
     - name:  text6
-      title: '1, 3, 5-yr Survival'
+      title: '`1, 3, 5-yr Survival  - ${explanatory}`'
       type:  Html
       clearWith:
           - explanatory
@@ -82,7 +66,7 @@ items:
           - overalltime
 
     - name:  text8
-      title: Pairwise Comparison
+      title: '`Pairwise Comparison - ${explanatory}`'
       type:  Preformatted
       clearWith:
           - explanatory
@@ -90,7 +74,7 @@ items:
           - overalltime
 
     - name:  text9
-      title: Pairwise Comparison Summary
+      title: '`Pairwise Comparison Summary - ${explanatory}`'
       type:  Html
       clearWith:
           - explanatory
@@ -98,7 +82,7 @@ items:
           - overalltime
 
     - name: plot
-      title: Survival Plot
+      title: '`Survival Plot  - ${explanatory}`'
       type: Image
       width:  600
       height: 450
