--- a/jamovi/tableone.r.yaml
+++ b/jamovi/tableone.r.yaml
@@ -15,6 +15,7 @@ items:
       type:  Preformatted
       clearWith:
           - vars
+          - excl
       visible: (sty:t1)
       refs: tableone
 
@@ -23,7 +24,27 @@ items:
       type:  Html
       clearWith:
           - vars
+          - excl
       visible: (sty:t2)
       refs: gtsummary
+
+    - name:  tablestyle3
+      title: ''
+      type:  Html
+      clearWith:
+          - vars
+          - excl
+      visible: (sty:t3)
+      refs: arsenal
+
+
+    - name:  tablestyle4
+      title: ''
+      type:  Preformatted
+      clearWith:
+          - vars
+          - excl
+      visible: (sty:t4)
+      refs: janitor
 
 ...
